[tool.pdm]
includes = []
[tool.pdm.dev-dependencies]
dev = [
    "ipython<9.0.0,>=8.0.1",
    "ptpython<4.0.0,>=3.0.20",
    "pudb<2023.0,>=2022.1",
]

[[tool.pdm.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
verify_ssl = true
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "incr-eta"
version = "0.1.0"
description = "ETA with incremental training"
authors = [
    {name = "Leo", email = "cli4168@hillstonenet.com"},
]
dependencies = [
    "Flask<3.0.0,>=2.0.3",
    "river<1.0.0,>=0.10.1",
    "scikit-learn<2.0.0,>=1.0.2",
    "gunicorn<21.0.0,>=20.1.0",
    "requests>=2.27.1",
    "tqdm>=4.62.3",
    "matplotlib>=3.5.2",
    "PyQt5>=5.15.6",
]
requires-python = ">=3.9,<3.10"
license = {text = "BSD"}

[project.urls]
homepage = ""
